--- a/layout-fixo-centralizado/css/style.css
+++ b/layout-fixo-centralizado/css/style.css
@@ -53,8 +53,9 @@ body {
 }
 
 #post-area {
-  width: 660px;
+  width: 650px;
   margin: auto;
+  float: right;
 
 }
 
@@ -64,12 +65,12 @@ body {
   background: white;
 }
 
-
-
 .side-content {
   background: white;
   padding: 10px;
   margin-bottom: 20px;
+  width: 230px;
+  float: left;
 }
 
 #side-area {
