refactor: improve sematic header,nav,main

--- a/layout-final/css/style.css
+++ b/layout-final/css/style.css
@@ -39,12 +39,12 @@ body {
 }
 
 #area-logo,
-#area-menu {
+nav {
   padding: 10px;
 
 }
 
-#main-area {
+#main {
 
     width: 900px;
     margin: 0;
