--- a/layout-final/css/style-contact.css
+++ b/layout-final/css/style-contact.css
@@ -1,13 +1,13 @@
 /* Area Contact*/
 
-.area-contact {
+section {
     
     margin: auto;
 
 }
 
 
-#main-area {
+main {
 
     width: 900px;
     margin: auto;
