--- a/layout-final/css/layout/article.css
+++ b/layout-final/css/layout/article.css
@@ -1,5 +1,27 @@
 .article {
-  padding: 20px;
-  margin-bottom: 20px;
-  background: white;
+  display: flex;
+  margin: 100px 0px 100px 0px;
+}
+
+.article img {
+  width: 100%;
+  height: 100%;
+  
+}
+
+.article div, picture {
+  width: 50%;
+}
+
+.article:nth-child(odd) {
+flex-direction: row-reverse;
+}
+
+.article > div:first-child {
+  padding: 80px;
+}
+
+.title--who-we-are{
+
+order: -1;
 }
