--- a/layout-final/css/layout/header.css
+++ b/layout-final/css/layout/header.css
@@ -1,23 +1,24 @@
 .header {
-    background-color: #0c0c0c;
+    background-color: #212121;
     padding: 15px;
     text-align: center;
+    min-width: 100vw
   
   }
 
-#header a:link,
-#header a:Visited {
-  color: #fff;
+.header a:link,
+.header a:Visited {
+  color: rgb(255, 255, 255);
   padding: 8px 12px;
 }
 
-#header a:hover {
+.header  a:hover {
   color: #993a3a;
   background: rgb(22, 22, 22);
   text-decoration: none;
 }
 
-#header__logo {
+.header__logo {
   padding: 10px;
 
 }
