--- a/layout-final/css/layout/nav.css
+++ b/layout-final/css/layout/nav.css
@@ -2,3 +2,15 @@ nav {
     padding: 10px;
   
   }
+
+.nav__list {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  
+}
+
+.nav__link {
+  border: 5px; 
+}
+
