modify font and delete svg

--- a/layout-final/css/base/reset.css
+++ b/layout-final/css/base/reset.css
@@ -9,7 +9,7 @@ body,
 input,
 button {
   font-size: 1em;
-  font-family: "Nunito", sans-serif;
+  font-family: "Cormorant SC", serif;
 }
 
 button {
