--- a/layout-final/css/base/style.css
+++ b/layout-final/css/base/style.css
@@ -1,6 +1,6 @@
 /*Import CSS*/
 
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;500;700&display=swap");
 @import "reset.css";
 @import "../layout/header.css";
 @import "../layout/main.css";
