--- a/layout-final/css/layout/footer.css
+++ b/layout-final/css/layout/footer.css
@@ -1,7 +1,7 @@
 .footer {
-    text-align: center;
-    padding: 80px;
-    min-width: 100vw;
-    background-color: #48494a;
-    color: #fff;
-  }
+  text-align: center;
+  padding: 5em;
+  min-width: 100vw;
+  background-color: #48494a;
+  color: #fff;
+}
