--- a/layout-final/css/layout/article.css
+++ b/layout-final/css/layout/article.css
@@ -1,27 +1,26 @@
 .article {
   display: flex;
-  margin: 100px 0px 100px 0px;
+  margin: 6.25em 0em 6.25em 0em;
 }
 
 .article img {
   width: 100%;
   height: 100%;
-  
 }
 
-.article div, picture {
+.article div,
+picture {
   width: 50%;
 }
 
 .article:nth-child(odd) {
-flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .article > div:first-child {
-  padding: 80px;
+  padding: 5em;
 }
 
-.title--who-we-are{
-
-order: -1;
+.title--who-we-are {
+  order: -1;
 }
