--- a/layout-final/css/layout/header.css
+++ b/layout-final/css/layout/header.css
@@ -1,14 +1,14 @@
 .header {
   background-color: #212121;
-  padding: 15px;
+  padding: 0.9375em;
   text-align: center;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .header a:link,
 .header a:visited {
   color: rgb(255, 255, 255);
-  padding: 8px 12px;
+  padding: 0.5em 0.75em;
 }
 
 .header a:hover {
@@ -18,7 +18,7 @@
 }
 
 .header__logo {
-  padding: 10px;
+  padding: 0.625em;
 }
 
 .span--white {
