--- a/layout-final/css/layout/nav.css
+++ b/layout-final/css/layout/nav.css
@@ -1,16 +1,13 @@
 nav {
-    padding: 10px;
-  
-  }
+  padding: 0.625em;
+}
 
 .nav__list {
   display: flex;
   justify-content: center;
   margin: 0;
-  
 }
 
 .nav__link {
-  border: 5px; 
+  border: 0.3125em;
 }
-
