--- a/layout-final/css/base/style.css
+++ b/layout-final/css/base/style.css
@@ -13,3 +13,68 @@
 @import "../state/";
 @import "theme";
 @import "../layout/section.css";
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+  .nav__list {
+    font-size: x-small;
+  }
+  .article,
+  .article:nth-child(odd) {
+    flex-direction: column;
+  }
+  .article > div:first-child {
+    padding: 10px;
+  }
+  .article div,
+  picture {
+    width: 100%;
+  }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 799.99px) {
+  .article,
+  .article:nth-child(odd) {
+    flex-direction: column;
+    margin: 2.25em 0em 2.25em 0em;
+  }
+  .article > div:first-child {
+    padding: 10px;
+  }
+  .article div,
+  picture {
+    width: 100%;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 800px) and (max-width: 991.98px) {
+  article > div:first-child {
+    padding: 3em;
+  }
+
+  section.section {
+    padding: 0em;
+  }
+
+  .nav__list {
+    font-size: x-large;
+  }
+
+  .article__desc {
+    font-size: 1.25em;
+  }
+
+  .article__picture {
+    width: 55%;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1201px) {
+}
