--- a/layout-final/css/pages/style-contact.css
+++ b/layout-final/css/pages/style-contact.css
@@ -8,6 +8,7 @@ body {
   background-color: #212121;
   flex-direction: column;
   margin: auto;
+  min-height: 100%;
 }
 
 .aside__form {
@@ -39,7 +40,7 @@ textarea {
 .button {
   border: none;
   color: white;
-  padding: 1em 4.000em;
+  padding: 1em 4em;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -63,7 +64,7 @@ textarea {
 .flex-row {
   display: flex;
   flex-direction: row;
-  margin: auto;
+  margin: 7em auto;
 }
 
 .form--label {
