--- a/layout-fixo-centralizado/css/style.css
+++ b/layout-fixo-centralizado/css/style.css
@@ -14,17 +14,16 @@ h2 {
 }
 
 .green {
-  color: #5D8512;
+  color: #5d8512;
 }
 
 .red {
-  color: #F55154;
+  color: #f55154;
 }
 
 body {
   font-size: 1em;
   background: #e6e6e6;
-
 }
 
 /*Layout*/
@@ -33,27 +32,22 @@ body {
   background-color: #0c0c0c;
   padding: 15px;
   text-align: center;
-
 }
 
 #area-logo,
 #area-menu {
   padding: 10px;
-
 }
 
 #main-area {
-
-    width: 900px;
-    margin: 0;
-
+  width: 900px;
+  margin: auto;
 }
 
 #post-area {
   width: 650px;
   margin: auto;
   float: right;
-
 }
 
 .post {
@@ -80,7 +74,6 @@ body {
   text-align: center;
   padding: 15px;
   background: #ccc;
-
 }
 
 /*Formatação do Menu*/
@@ -89,9 +82,8 @@ a {
 }
 
 a:link,
-a:Visited {
+a:visited {
   color: #000;
-
 }
 
 a:hover {
@@ -99,7 +91,7 @@ a:hover {
 }
 
 #header a:link,
-#header a:Visited {
+#header a:visited {
   color: #fff;
   padding: 8px 12px;
 }
@@ -121,11 +113,9 @@ a:hover {
 .side-content a:visited {
   color: #fff;
   background: #000;
-
 }
 
 .side-content a:hover {
-
   background: rgb(22, 22, 22);
   color: #993a3a;
   padding-left: 20px;
@@ -140,7 +130,6 @@ a:hover {
 
 /* Forms */
 
-
 label {
   font-weight: bold;
 }
@@ -153,5 +142,5 @@ textarea {
 /* Map */
 
 .location-map {
-  box-shadow: 0px 2px 14px -3px rgb(0 0 0 / 75%)
+  box-shadow: 0px 2px 14px -3px rgb(0 0 0 / 75%);
 }
