--- a/layout-final/css/layout/header.css
+++ b/layout-final/css/layout/header.css
@@ -36,7 +36,7 @@
 
 .parallax {
   /* The image used */
-  background-image: url(../../image/parallax.png);
+  background-image: url(../../image/parallax2.png);
 
   /* Full height */
   height: 90%;
