--- a/layout-final/css/base/style.css
+++ b/layout-final/css/base/style.css
@@ -45,6 +45,7 @@
   .article:nth-child(odd),
   .article {
     flex-direction: column;
+    margin: 0 auto;
   }
 
   .article div,
@@ -57,10 +58,10 @@
   .article,
   .article:nth-child(odd) {
     flex-direction: column;
-    margin: 2.25em 0em 2.25em 0em;
+    /* margin: 2.25em 0em 2.25em 0em; */
   }
   .article > div:first-child {
-    padding: 10px;
+    /* padding: 10px; */
   }
 
   /* menu toggle */
@@ -125,7 +126,7 @@
     flex-direction: column;
   }
   .article > div:first-child {
-    padding: 10px;
+    /* padding: 10px; */
   }
   .article div,
   .article picture {
