--- a/layout-final/css/base/style.css
+++ b/layout-final/css/base/style.css
@@ -7,6 +7,7 @@
 @import "../layout/nav.css";
 @import "../components/button.css";
 @import "../components/picture.css";
+@import "../components/loader.css";
 @import "../layout/article.css";
 @import "../layout/aside.css";
 @import "../layout/footer.css";
